# universal-translator

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/app/: cleanup.py  config.py  main.py
backend/src/app/agents/: pipeline.py  prompts.py  tools.py
backend/src/app/formats/: base.py  csv_handler.py  docx_handler.py  plaintext.py  pptx_handler.py  xlsx_handler.py
backend/src/app/llm/: azure_openai_provider.py  base.py  google_provider.py  openai_provider.py
backend/src/app/models/: job.py  session.py
backend/src/app/routes/: jobs.py  session.py  translate.py
backend/src/app/worker/: celery_app.py  tasks.py
backend/tests/: conftest.py
backend/tests/test_formats/: test_csv_handler.py  test_plaintext.py
backend/tests/test_llm/: test_base.py
backend/tests/test_routes/: test_jobs.py  test_session.py  test_translate.py
docs/plans/: 2026-03-05-universal-translator-design.md
frontend/: package.json  vite.config.ts
frontend/src/: app.html
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/components/: DropZone.svelte  Instructions.svelte  JobItem.svelte  JobList.svelte  LanguageSelect.svelte
frontend/src/routes/: +page.svelte
